// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment Unit Tests General payments should successfully create payment given valid data 1`] = `
Object {
  "amount": Object {
    "amount": 10000,
    "currency": "USD",
  },
  "circlePaymentId": "62d74450-9b61-4d5a-8890-4fb22eb09fd8",
  "createdAt": Object {
    "nanoseconds": 0,
    "seconds": 1608168243,
  },
  "fees": Object {
    "amount": 0,
    "currency": "USD",
  },
  "id": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa76",
  "proposalId": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa76",
  "source": Object {
    "id": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa76",
    "type": "card",
  },
  "status": "pending",
  "subscriptionId": undefined,
  "type": "one-time",
  "updatedAt": Object {
    "nanoseconds": 0,
    "seconds": 1608176083,
  },
  "userId": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa76",
}
`;

exports[`Payment Unit Tests One-time payments should create the payment given the correct payload 1`] = `
Object {
  "amount": 1598,
  "currency": "USD",
}
`;

exports[`Payment Unit Tests Payment polling should poll until failed status is reached 1`] = `
Object {
  "amount": Object {
    "amount": 36900,
    "currency": "USD",
  },
  "circlePaymentId": "b3025713-7988-45e5-8af8-cca8d624ce28",
  "createdAt": Object {
    "nanoseconds": 0,
    "seconds": 1608168243,
  },
  "failure": Object {
    "errorCode": "payment_failed",
    "errorDescription": "Payment failed due to unspecified error",
  },
  "fees": Object {
    "amount": 1598,
    "currency": "USD",
  },
  "id": "0ef989c3-d096-42c1-b525-66a3719e413a",
  "proposalId": "706da88a-a417-464d-8d36-3d68fb2b954c",
  "source": Object {
    "id": "62e367b3-6e16-44d8-9407-d5f9486924f4",
    "type": "card",
  },
  "status": "failed",
  "subscriptionId": "811dd5ed-1481-43bc-bc79-cacf6598916f",
  "type": "subscription",
  "updatedAt": Object {
    "nanoseconds": 0,
    "seconds": 1608176083,
  },
  "userId": "2Ti3LkP23KUJVp2AZY3wVHYWRxm2",
}
`;

exports[`Payment Unit Tests Payment polling should poll until successful status is reached 1`] = `
Object {
  "amount": Object {
    "amount": 36900,
    "currency": "USD",
  },
  "circlePaymentId": "b3025713-7988-45e5-8af8-cca8d624ce28",
  "createdAt": Object {
    "nanoseconds": 0,
    "seconds": 1608168243,
  },
  "fees": Object {
    "amount": 1598,
    "currency": "USD",
  },
  "id": "0ef989c3-d096-42c1-b525-66a3719e413a",
  "proposalId": "706da88a-a417-464d-8d36-3d68fb2b954c",
  "source": Object {
    "id": "62e367b3-6e16-44d8-9407-d5f9486924f4",
    "type": "card",
  },
  "status": "paid",
  "subscriptionId": "811dd5ed-1481-43bc-bc79-cacf6598916f",
  "type": "subscription",
  "updatedAt": Object {
    "nanoseconds": 0,
    "seconds": 1608176083,
  },
  "userId": "2Ti3LkP23KUJVp2AZY3wVHYWRxm2",
}
`;
